--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "main": "index.js",
   "devDependencies": {
     "sass": "^1.69.5"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
