--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A starting point for the CSS Frameworks CA project",
   "scripts": {
     "build": "sass src/scss:dist/css",
-    "watch": "sass --watch src/scss:dist/css "
+    "watch": "sass --watch src/scss:dist/css ",
+    "dev": "npm run watch & live-server"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "homepage": "https://github.com/NoroffFEU/css-frameworks-ca#readme",
   "main": "index.js",
   "devDependencies": {
+    "live-server": "^1.2.2",
     "sass": "^1.69.5"
   },
   "dependencies": {
