--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.69.5"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "bootstrap": "^5.3.2",
+    "homebrew": "^0.1.0"
   }
 }
